fixed css spacing

--- a/src/extension.css
+++ b/src/extension.css
@@ -1,10 +1,10 @@
 .rmp-rating{
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .rmp-no-rating{
-    padding-top: 20px;
-    padding-bottom: 20x;
+    padding-top: 15px;
+    padding-bottom: 15x;
     font-style: italic;  
 }
